添加了order的状态查询

--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -58,6 +58,20 @@ sup.unit {
   display: inline-block;
 }
 
+.car-filter .car-filter-item {
+  select {
+    @extend .form-control;
+    display: inline;
+    width: auto;
+  }
+  select[multiple] {
+    height: auto;
+  }
+  .expand-multi-select-icon.clickable, .collapse-multi-select-icon.clickable {
+    margin: 10px;
+  }
+}
+
 // -----------------------------------------
 // 明细画面显示的logo 
 // -----------------------------------------
