front 车检站明细页面 refresh map按钮添加重置文字

--- a/app/views/front/stations/show.html.erb
+++ b/app/views/front/stations/show.html.erb
@@ -65,8 +65,8 @@
 <div class="row station-area-for-show" id="station_map">
   <div class="title">
     <div class="pull-right" style="margin-top: 3px;">
-      <button id="refresh_map" class="btn btn-danger">
-        <i class="fa fa-refresh"></i>
+      <button id="refresh_map" class="btn btn-warning">
+        <i class="fa fa-refresh"></i> 重置
       </button>
     </div>
     <h4>车检站地图&nbsp;&nbsp;<small style="color: white;">[<%= @station.address_text %>]</small></h4>
