--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -217,3 +217,10 @@ footer {
   width: 100%;
   height: 100%;
 }
+
+// -----------------------------------------
+// display none
+// -----------------------------------------
+.display_none {
+  display: none;
+}
