车检站管理员不能被删除，管理员只能添加普通员工，取消角色管理

--- a/app/views/back/mystation/station_admins/_form.html.erb
+++ b/app/views/back/mystation/station_admins/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :password, required: @station_admin.new_record? %>
     <%= f.input :password_confirmation %>
     <%# f.association :roles, as: :check_boxes, label_method: :label %>
-    <%= f.input :roles, as: :check_boxes, collection: admin_role_collections(:station) %>
+    <%# f.input :roles, as: :check_boxes, collection: admin_role_collections(:station) %>
   </div>
   <div class="car-form-actions bg-gray">
     <div class='col-sm-offset-2 col-sm-10 button-wrapper'>
