--- a/app/views/back/mystation/dashboard/index.html.erb
+++ b/app/views/back/mystation/dashboard/index.html.erb
@@ -7,7 +7,7 @@
         <h3>
           <%= @newest_order_phone_count %><sup class="unit"> <%= t('view.unit.jian') %></sup>
         </h3>
-        <p>新电话预约</p>
+        <p>新预约</p>
       </div>
       <div class="icon">
         <i class="ion ion-bag"></i>
