--- a/app/views/front/user/uaqs/index.html.erb
+++ b/app/views/front/user/uaqs/index.html.erb
@@ -18,5 +18,15 @@
       # distance_of_time_in_words(Time.now, item.created_at)
       distance_of_time_in_words_to_now(item.created_at, include_seconds: true)
     end
+    g.column do |item|
+      links = []
+      if can? :read, item
+        links << link_to(I18n.t('view.action.show'), [:front, :user, item])
+      end
+      if can? :destroy, item
+        links << link_to(I18n.t('view.action.delete'), [:front, :user, item], method: :delete, data: { confirm: t('view.confirm.delete')})
+      end
+      links.join(t('view.label.links_split')).html_safe
+    end
   end -%>
 </div>
