--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -30,7 +30,7 @@
     <div id="main">
       <%= render "layouts/front/navbar" %>
       <div id='main-content'>
-        <%# 用于welcome的主页%>
+        <%# 目前只用于welcome的主页%>
         <%= yield :header_area %>
         <div class="container">
           <%= yield %>
