--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -1,8 +1,10 @@
     <style>
+      footer {
+        background-color: #555;
+        color: #fff;
+      }
       #main-content {
         padding-top: 0px;
-        background-color: #fff;
-        padding-bottom: 30px;
       }
 
       #main-content .container {
@@ -22,9 +24,9 @@
 
 <% content_for :header_area do %>
     <!-- jumbotron -->
+        <!--
     <div id="main-jumbotron" class="jumbotron wrapped-content">
       <div class="container">
-        <!--
         <h1 style="font-size:50px; margin-top:50px;">一站式服务</h1>
         <h2 style="margin-top:30px;">
           <p>轻松预约，不用排队，个性服务，保您满意</p>
@@ -34,12 +36,68 @@
             </p>
           </div>
         </h2>
-        -->
       </div>
     </div>
+        -->
     <!-- END jumbotron -->
+    <style>
+      .welcome_image {
+        background: url(<%= asset_path 'welcome_site.png' %>) no-repeat;
+        height: 326px;
+        width: 540px;
+        position: absolute;
+        right: 100px;
+        bottom: 0px;
+      }
+      .welcome-kefu {
+        background: url(<%= asset_path 'kefu.png' %>) no-repeat;
+        bottom: 50px;
+      }
+      .feather-des {
+        position: absolute;
+        top: 100px;
+        color: #fff;
+        font-weight: bold;
+        text-align: center;
+      }
+      .feather-des > h1 {
+        font-size: 48px;
+      }
+      .feather-des > button {
+        font-size: 36px;
+      }
+    </style>
+    <div class="container-fluid" style="height: 450px; background-color: #09B3CD; position: relative;">
+      <div class="feather-des" style="left: 200px;">
+        <h1>网上预约</h1>
+        <h1>随到随检</h1>
+        <br>
+        <button class="btn btn-danger btn-lg">
+          马上预约检车
+        </button>
+      </div>
+      <div class="welcome_image"></div>
+    </div>
+    <div class="container-fluid" style="height: 450px; background-color: #F8931E; position: relative;">
+      <div class="feather-des" style="right: 300px;">
+        <h1>一个电话</h1>
+        <h1>轻松搞定</h1>
+        <br>
+        <button class="btn btn-success btn-lg">
+          查看预约电话
+        </button>
+      </div>
+      <div class="welcome_image welcome-kefu" style="left: 100px;"></div>
+    </div>
+    <div class="container-fluid" style="height: 450px; background-color: #92278F; position: relative;text-align:center;">
+      <%= image_tag asset_path('weixin4.png'), class: "img-circle", style: "margin-top: 100px;" %>
+      <div style="position:absolute; top: 200px;color:#fff;text-align:center;width:100%;">
+        <h1 style="font-size: 48px;">扫一扫，关注我们</h1>
+      </div>
+    </div>
 <%end%>
 
+<% if false %>
     <div id="nav_circle" class="text-center">
       <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -63,3 +121,4 @@
         </div><!-- /.col-sm-4 -->
       </div><!-- /.row -->
     </div><!-- /.nav_circle-->
+<%end%>
