前台的整体布局调整，不要左边的sidebar

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -2,7 +2,7 @@
 // 系统通用样式
 // -----------------------------------------
 html, body {
-  background: #e4e4e4;
+  background: #555;
 }
 
 .important-info {
@@ -65,7 +65,8 @@ html, body {
 // -----------------------------------------
 footer {
   padding: 20px 0px;
-  background-color: #e4e4e4;
+  background-color: #555;
+  color: #fff;
 }
 
 
