--- a/app/views/front/stations/index.html.erb
+++ b/app/views/front/stations/index.html.erb
@@ -1,9 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
-    <%= render "sidebar" %>
-  </div><!-- /.col -->
-
-  <div class="col-md-9 car-content-side">
+  <div class="car-content-side">
     <div class="car-info-list">
       <div class='car-condition'>
         <div class="car-header">
@@ -106,5 +102,9 @@
         </div><!-- nav-tabs-custom -->
       </div>
     </div>
-  </div>
+  </div><!-- /.col 8 -->
+
+  <div class="car-right-side">
+    <%= render "front/right_side/hot_stations"%>
+  </div><!-- /.col -->
 </div><!-- /.row -->
