--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -12,6 +12,13 @@ html, body {
 // -----------------------------------------
 // 顶部国定菜单
 // -----------------------------------------
+
+@media (min-width: 768px) and (max-width: 990px) {
+  #navbar-top .navbar-header {
+    display: none;
+  }
+}
+
 #navbar-top.navbar-default {
   .navbar-toggle {
     background-color: $car-color-primary;
@@ -57,15 +64,12 @@ html, body {
 a.list-group-item:hover, 
 a.list-group-item:focus {
   text-decoration:none;
-  color: #fff;
-  background: #09B3CD;
+  // background-color: #09B3CD;
+  background-color: #dff0d8;
   padding-left: 20px;
   font-weight: bold;
 }
 
-a.list-group-item:hover > * {
-  color: #fff;
-}
 // =========================================
 // Tips
 // =========================================
@@ -94,17 +98,12 @@ a.list-group-item:hover > * {
   text-align: left;
 }
 
-#main-content > .container {
-  background-color: #fff;
-}
-
-#main-content > .container > .row {
-  padding: 20px 30px 30px;
-}
-
-// 右侧的内容
+// 左侧主要内容部分
 .car-content-side {
-  min-height: 300px;
+  min-height: 450px;
+  background-color: #fff;
+  padding: 15px;
+  @extend .col-md-9;
 }
 
 // 主页的特征图标
@@ -123,6 +122,14 @@ a.list-group-item:hover > * {
 }
 .car-big-nav-icon-weixin {
   @include car-big-nav-icon('weixin4.png');
+}
+
+// =========================================
+// 右侧side
+// =========================================
+.car-right-side {
+  padding-left: 50px;
+  @extend .col-md-3;
 }
 
 // =========================================
@@ -301,13 +308,6 @@ form#sign_in_remote_form_phone .car-error-tip {
 img.station-pictures {
   width: 525px !important;
   height: 290px !important;
-}
-
-// -----------------------------------------
-// 前端front的list画面的list样式
-// -----------------------------------------
-.car-info-list {
-  margin-top: 18px;
 }
 
 // -----------------------------------------
