--- a/app/views/front/question/index_faq.html.erb
+++ b/app/views/front/question/index_faq.html.erb
@@ -1,9 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
-    <%= render "sidebar" %>
-  </div><!-- /.col -->
-
-  <div class="col-md-9 car-content-side">
+  <div class="car-content-side">
     <div class="car-info-list">
       <div class="car-condition">
         <form action='<%= front_question_index_faq_path%>' method='get'>
@@ -56,6 +52,11 @@
       </div>
     </div>
   </div>
+
+  <div class="car-right-side">
+    <%= render "front/right_side/hot_posts"%>
+  </div><!-- /.col -->
+
 </div><!-- /.row -->
 
 <% if current_user %>
