--- a/app/views/front/welcome/list_posts.html.erb
+++ b/app/views/front/welcome/list_posts.html.erb
@@ -1,9 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
-    <%= render "sidebar" %>
-  </div><!-- /.col -->
-
-  <div class="col-md-9 car-content-side">
+  <div class="car-content-side">
     <div class="car-info-list list-group">
       <% @catagory.posts.published.each do |post| %>
       <a href="<%= front_post_path(@catagory, post) %>" class="list-group-item">
@@ -15,4 +11,9 @@
       <% end %>
     </div>
   </div>
+
+  <div class="car-right-side">
+    <%# render "sidebar" %>
+    <%= render "front/right_side/hot_posts"%>
+  </div><!-- /.col -->
 </div><!-- /.row -->
