页面底部以及welcome页面再调整

--- a/app/assets/stylesheets/devise_user.css.scss
+++ b/app/assets/stylesheets/devise_user.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 @import "font-awesome";
+// car变量
+@import "front/_variables";
 @import "common/base";
 
 .input-group-addon, .form-control {
