--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -2,7 +2,7 @@
 // 系统通用样式
 // -----------------------------------------
 html, body {
-  background: #555;
+  background-color: $car-body-bg-color;
 }
 
 .important-info {
@@ -64,9 +64,24 @@ html, body {
 // footer部分
 // -----------------------------------------
 footer {
-  padding: 20px 0px;
-  background-color: #555;
+  padding: 30px 0px 40px;
+  background-color: $car-body-bg-color;
   color: #fff;
+
+  ul {
+    list-style: none;
+    padding: 0px;
+    li {
+      display: inline-block;
+      margin-right: 10px;
+    }
+  }
+  a, a:hover {
+    color: #fff;
+  }
+  div.site-info > span {
+    margin-right: 10px;
+  }
 }
 
 
