--- a/app/views/layouts/front/_footer.html.erb
+++ b/app/views/layouts/front/_footer.html.erb
@@ -1,7 +1,15 @@
       <!-- FOOTER -->
       <div class="clearfix"></div>
       <footer class='text-center'>
-        <p>&copy; 2014 西安车辆年检Company, Inc.</p>
-        <p><a href="<%= t('view.site.beian_site')%>" target="_blank"><%= t('view.site.beianhao')%></a></p>
-        <p>&middot; <a href="#">联系我们</a> &middot; <a href="#">技术支持</a></p>
+        <ul>
+          <li><a href="#">常见问题</a></li>
+          <li>|</li>
+          <li><a href="#">联系我们</a></li>
+          <li>|</li>
+          <li><a href="#">技术支持</a></li>
+        </ul>
+        <div class="site-info">
+          <span>&copy; 2014-15 <a href="www.xiansc.cn">车辆年检服务网</a></span>
+          <span><a href="<%= t('view.site.beian_site')%>" target="_blank"><%= t('view.site.beianhao')%></a></span>
+        </div>
       </footer>
