添加了station默认logo图片

--- a/app/assets/stylesheets/back.css.scss
+++ b/app/assets/stylesheets/back.css.scss
@@ -18,6 +18,9 @@
 // 我的css
 // =====================================================
 @import "wice_grid";
+
+// car变量
+@import "front/_variables";
 @import "common/base";
 // 后台的通用样式
 @import "back/all";
