mystation后台显示车检站标题的位置变更

--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -25,6 +25,16 @@ sup.unit {
   font-size: 20px;
 }
 
+// -----------------------------------------
+// mystation顶部station名称
+// -----------------------------------------
+.mystation-title {
+  color: #fff;
+  font-size: 20;
+  margin-left: 50px;
+  float: left;
+  line-height: 50px;
+}
 
 // -----------------------------------------
 // 重写既有css(比如adminlte的样式)
