--- a/app/views/layouts/back/_header.html.erb
+++ b/app/views/layouts/back/_header.html.erb
@@ -1,15 +1,9 @@
     <% if current_admin.system_admin? %>
       <%= link_to t('view.site.back_title'), back_system_root_path, {class: 'logo'} %>
     <% else %>
-      <a class="logo" href="<%= back_mystation_root_path %>">
-        <% if current_admin.station.status_reviewed? %>
-        <i class="ion ion-model-s"></i> 
-        <% else %>
-        <span class="badge" style="background-color: red;"><%= current_admin.station.status_text%></span>
-        <% end %>
-        <%= current_admin.station.name%>
-      </a>
+      <%= link_to t('view.site.back_mystation_title'), back_mystation_root_path, {class: 'logo'} %>
     <% end %>
+
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
       <!-- Sidebar toggle button-->
@@ -19,6 +13,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
+
+    <% if current_admin.station_admin? %>
+      <span class="mystation-title">
+        <%= current_admin.station.name%>
+        <% if current_admin.station.status_reviewed? %>
+          <sup class="badge" style="background-color: #449d44;"><%= current_admin.station.status_text%></sup>
+        <% else %>
+          <sup class="badge" style="background-color: #d9534f;"><%= current_admin.station.status_text%></sup>
+        <% end %>
+      </span>
+    <% end %>
+
       <div class="navbar-right">
         <ul class="nav navbar-nav">
         <!-- Messages: style can be found in dropdown.less-->
