车检站管理员列表中添加了车检站列

--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -106,3 +106,10 @@ sup.unit {
   width: 120px;
   margin: 0px 5px;
 }
+
+// -----------------------------------------
+// 过滤部分的车检站select
+// -----------------------------------------
+#grid_f_station_id {
+  width: 200px;
+}
