--- a/app/assets/stylesheets/front_user.css.scss
+++ b/app/assets/stylesheets/front_user.css.scss
@@ -17,6 +17,9 @@
 // 百度地图关联
 @import "baidu_map/SearchInfoWindow";
 
+// =====================================================
+// 我的css
+// =====================================================
 // car变量
 @import "front/_variables";
 @import "front/car_override";
