--- a/app/views/front/right_side/_hot_stations.html.erb
+++ b/app/views/front/right_side/_hot_stations.html.erb
@@ -1,3 +1,13 @@
-<div class="row bg-success" style="border: 1px solid #555; height: 200px;">
-  热门车检站
+<div class="row panel panel-danger">
+  <div class="panel-heading">热门车检站</div>
+  <div class="panel-body">
+    <ul>
+      <li>
+        东郊车检站
+      </li>
+      <li>
+        东郊车检站
+      </li>
+    </ul>
+  </div>
 </div>
