--- a/app/views/front/stations/index.html.erb
+++ b/app/views/front/stations/index.html.erb
@@ -98,6 +98,7 @@
                 </div>
               </div>
             </div><!-- /.tab-pane -->
+            <div class="clearfix"></div>
           </div><!-- /.tab-content -->
         </div><!-- nav-tabs-custom -->
       </div>
@@ -106,5 +107,6 @@
 
   <div class="car-right-side">
     <%= render "front/right_side/hot_stations"%>
+    <%= render "front/right_side/banner"%>
   </div><!-- /.col -->
 </div><!-- /.row -->
