--- a/app/views/front/right_side/_hot_posts.html.erb
+++ b/app/views/front/right_side/_hot_posts.html.erb
@@ -1,3 +1,13 @@
-<div class="row" style="border: 1px solid #555; height: 200px; background-color: #fff;">
-  热门文章
+<div class="row panel panel-danger">
+  <div class="panel-heading">热门文章</div>
+  <div class="panel-body">
+    <ul>
+      <li>
+        为什么车检重要
+      </li>
+      <li>
+        为什么车检重要
+      </li>
+    </ul>
+  </div>
 </div>
