--- a/app/views/layouts/front/_footer.html.erb
+++ b/app/views/layouts/front/_footer.html.erb
@@ -2,6 +2,8 @@
       <div class="clearfix"></div>
       <footer class='text-center'>
         <ul>
+          <li><a href="#">网站协议</a></li>
+          <li>|</li>
           <li><a href="#">常见问题</a></li>
           <li>|</li>
           <li><a href="#">联系我们</a></li>
@@ -9,7 +11,7 @@
           <li><a href="#">技术支持</a></li>
         </ul>
         <div class="site-info">
-          <span>&copy; 2014-15 <a href="www.xiansc.cn">车辆年检服务网</a></span>
+          <span>&copy; 2014-15 <a href="http://www.xiansc.cn">车辆年检服务网</a></span>
           <span><a href="<%= t('view.site.beian_site')%>" target="_blank"><%= t('view.site.beianhao')%></a></span>
         </div>
       </footer>
