footer的背景色和body的背景色分开

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -65,7 +65,7 @@ html, body {
 // -----------------------------------------
 footer {
   padding: 30px 0px 40px;
-  background-color: $car-body-bg-color;
+  background-color: $car-footer-bg-color;
   color: #fff;
 
   ul {
