--- a/app/assets/stylesheets/front/_variables.css.scss
+++ b/app/assets/stylesheets/front/_variables.css.scss
@@ -5,5 +5,7 @@ $car-color-primary: #3C8DBC;
 //============ 
 // body的背景颜色
 $car-body-bg-color: #283038;
+// footer的背景颜色
+$car-footer-bg-color: #283038;
 // 主背景
 $car-body-bg-main: asset-url('bg-site-front.gif') repeat;
