去掉了html的背景色

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -1,10 +1,13 @@
 // -----------------------------------------
 // 系统通用样式
 // -----------------------------------------
-html, body {
+body {
   background-color: $car-body-bg-color;
 }
 
+// -----------------------------------------
+// 重要信息
+// -----------------------------------------
 .important-info {
   font-weight: bold;
   color: red;
