bug fixed 提问问题text框限制长度1000

--- a/app/views/front/common/_have_question_modalbox.html.erb
+++ b/app/views/front/common/_have_question_modalbox.html.erb
@@ -15,7 +15,7 @@
                   <abbr title="必填项">*</abbr> 问题内容
                 </label>
                 <div class="col-sm-9">
-                  <textarea class="string required form-control" id="uaq_question" name="uaq[question]"></textarea>
+                  <textarea class="string required form-control" id="uaq_question" name="uaq[question]" maxlength=1000></textarea>
                 </div>
               </div>
             </div>
