--- a/app/views/front/user/uaqs/_form.html.erb
+++ b/app/views/front/user/uaqs/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for([:front, :user, @uaq], html: {class: 'form-horizontal mask-form', role: 'form'} ) do |f| %>
   <div class='car-form-items'>
-    <%= f.input :question%>
+    <%= f.input :question, input_html: {maxlength: 1000}%>
   </div>
   <div class="car-form-actions bg-gray">
     <div class='col-sm-offset-2 col-sm-10 button-wrapper'>
