--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -15,6 +15,14 @@
   }
 }
 
+@media (min-width: 990px) and (max-width: 1200px) {
+  #navbar-top {
+    .navbar-logo > img {
+      display: none;
+    }
+  }
+}
+
 #navbar-top.navbar-default {
   .navbar-toggle {
     background-color: $car-color-primary;
@@ -30,6 +38,9 @@
 
 #navbar-top {
   border-bottom: 3px solid $car-color-primary;
+  .nav.navbar-nav {
+    margin-right: 50px;
+  }
   .nav.navbar-nav > li > a {
     color: #000;
     font-weight: bold;
@@ -44,12 +55,24 @@
   .navbar-logo {
     color: #000;
     font-weight: bold;
-    margin-right: 50px;
+    margin-right: 15px;
     padding: 0px;
+    line-height: 50px;
     img {
       height: 50px;
       width: 100px;
       margin-right: 10px;
+    }
+  }
+  .current-city-area {
+    display: inline-block;
+    float: left;
+    line-height: 50px;
+    margin-right: 30px;
+    .change-city {
+      font-size: 0.8em;
+      line-height: 40px;
+      margin-left: 5px;
     }
   }
 }
