开通城市的crud

--- a/app/views/front/common/_change_city_modalbox.html.erb
+++ b/app/views/front/common/_change_city_modalbox.html.erb
@@ -8,8 +8,9 @@
         </div>
         <div class="modal-body">
           <%pre_province = nil%>
-          <% OpenCity.all.each do |item| %>
+          <% OpenCity.default_order.each do |item| %>
             <% if pre_province != item.province_code %>
+              <% pre_province = item.province_code%>
               <div class="clearfix"></div>
               <span class="province-label"><%= ChinaCity.get(item.province_code)%></span>
             <% end %>
