背景色body的修改，fixed devise user page｀s footer

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -2,7 +2,7 @@
 // 系统通用样式
 // -----------------------------------------
 body {
-  background-color: $car-body-bg-color;
+  // background-color: $car-body-bg-color;
 }
 
 // -----------------------------------------
